Overhaul DTO architecture, organize controllers and improve battle system